<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingPageActivity">

    <Button
        android:id="@+id/personalData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personalData"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327" />

    <Button
        android:id="@+id/studies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/studies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personalData"
        app:layout_constraintVertical_bias="0.056" />

    <Button
        android:id="@+id/subjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subjects"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studies"
        app:layout_constraintVertical_bias="0.064"
        android:onClick="subjects"
        />

    <Button
        android:id="@+id/exams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exams"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subjects"
        app:layout_constraintVertical_bias="0.087" />

    <Button
        android:id="@+id/logutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exams"
        app:layout_constraintVertical_bias="0.13"
        android:onClick="logout"/>
</androidx.constraintlayout.widget.ConstraintLayout>